Improve parser JSON structure, add schedule insert handler for one group, overall improvements
