# docs/swagger.json
@@ -144,6 +144,48 @@
                 }
             }
         },
+        "/api/v1/insert-group-schedule/{uuid}": {
+            "post": {
+                "description": "Вставляет данные расписания и экзаменов для конкретной группы в базу данных",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "InsertGroupSchedule"
+                ],
+                "summary": "Вставка расписания группы",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "UUID группы",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "message: Group schedule inserted successfully",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "errors: [error messages]",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/write-schedule": {
             "post": {
                 "description": "Сохраняет данные расписания в CSV файл",
@@ -184,10 +226,16 @@
         "models.Audience": {
             "type": "object",
             "properties": {
+                "building": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
                 "deleted_at": {
+                    "type": "string"
+                },
+                "department_uid": {
                     "type": "string"
                 },
                 "id": {
@@ -213,10 +261,22 @@
                 "actType": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "fullName": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "shortName": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
@@ -228,6 +288,9 @@
                     "type": "string"
                 },
                 "deleted_at": {
+                    "type": "string"
+                },
+                "department_uid": {
                     "type": "string"
                 },
                 "id": {
@@ -265,10 +328,10 @@
                 "discipline": {
                     "$ref": "#/definitions/models.Discipline"
                 },
-                "endTime": {
-                    "type": "string"
+                "discipline_id": {
+                    "type": "integer"
                 },
-                "group_uuid": {
+                "endTime": {
                     "type": "string"
                 },
                 "groups": {
@@ -282,6 +345,10 @@
                 },
                 "permission": {
                     "type": "string"
+                },
+                "schedule_id": {
+                    "description": "Связь с Schedule",
+                    "type": "integer"
                 },
                 "startTime": {
                     "type": "string"
